# sagetasks

./: .coveragerc  .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  demo-prefect.py  demo.py  docker_run_demo.py  include.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml  docs.yml
airflow_dags/: example_dag.py  k8_operator.py
docs/: conf.py  index.md  requirements.txt
sagetasks/: cavatica.py  sevenbridges.py  synapse.py  utils.py
sagetasks/docker/: __init__.py  general.py  prefect.py
sagetasks/sevenbridges/: general.py  inputs.py  prefect.py  utils.py
sagetasks/synapse/: __init__.py  general.py  prefect.py
src/sagetasks/: __main__.py  main.py  utils.py
src/sagetasks/nextflowtower/: __init__.py  client.py  general.py  typer.py  utils.py
src/sagetasks/sevenbridges/: __init__.py  inputs.py  prefect.py  utils.py
src/sagetasks/synapse/: general.py  prefect.py
tests/: conftest.py  test_stub.py  test_utils.py
tests/nextflowtower/: test_client.py  test_utils.py
